kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicationplan
  labels:
    app: medicationplan
spec:
  replicas: 3
  selector:
    matchLabels:
      app: medicationplan
  template:
    metadata:
      labels:
        app: medicationplan
    spec:
      containers:
      - name: medicationplan
        image: 765415433338.dkr.ecr.eu-central-1.amazonaws.com/medicationplan:$IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: medicationplan
spec:
  selector:
    app: medicationplan
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medicationplan
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: https://care.med-united.health
    nginx.ingress.kubernetes.io/cors-expose-headers: X-Custom-Header
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
      - medicationplan.med-united.health
      secretName: medicationplan-tls
  rules:
  - host: medicationplan.med-united.health
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: medicationplan
              port:
                number: 8080
